--- a/atcrowdfunding01adminparent/atcrowdfunding03-admin-component/pom.xml
+++ b/atcrowdfunding01adminparent/atcrowdfunding03-admin-component/pom.xml
@@ -50,7 +50,13 @@
       <artifactId>atcrowdfunding06-common-reverse</artifactId>
       <version>1.0-SNAPSHOT</version>
       <scope>compile</scope>
+
     </dependency>
+
+
+
+
+
 
 
     <!-- Spring 依赖 -->
@@ -153,7 +159,25 @@
           <version>1.0-SNAPSHOT</version>
           <scope>compile</scope>
       </dependency>
-
+      <!--spring security 依赖-->
+      <!-- SpringSecurity 对 Web 应用进行权限管理 -->
+      <dependency>
+          <groupId>org.springframework.security</groupId>
+          <artifactId>spring-security-web</artifactId>
+          <version>4.2.10.RELEASE</version>
+      </dependency>
+      <!-- SpringSecurity 配置 -->
+      <dependency>
+          <groupId>org.springframework.security</groupId>
+          <artifactId>spring-security-config</artifactId>
+          <version>4.2.10.RELEASE</version>
+      </dependency>
+      <!-- SpringSecurity 标签库 -->
+      <dependency>
+          <groupId>org.springframework.security</groupId>
+          <artifactId>spring-security-taglibs</artifactId>
+        <version>4.2.10.RELEASE</version>
+      </dependency>
 
   </dependencies>
 
