--- a/atcrowdfunding01adminparent/pom.xml
+++ b/atcrowdfunding01adminparent/pom.xml
@@ -158,26 +158,10 @@
                 <artifactId>gson</artifactId>
                 <version>2.8.5</version>
             </dependency>
-            <!-- SpringSecurity 对 Web 应用进行权限管理 -->
-            <dependency>
-                <groupId>org.springframework.security</groupId>
-                <artifactId>spring-security-web</artifactId>
-                <version>4.2.10.RELEASE</version>
-            </dependency>
-            <!-- SpringSecurity 配置 -->
-            <dependency>
-                <groupId>org.springframework.security</groupId>
-                <artifactId>spring-security-config</artifactId>
-                <version>4.2.10.RELEASE</version>
-            </dependency>
-            <!-- SpringSecurity 标签库 -->
-            <dependency>
-                <groupId>org.springframework.security</groupId>
-                <artifactId>spring-security-taglibs</artifactId>
-                <version>4.2.10.RELEASE</version>
-            </dependency>
+
         </dependencies>
-    </dependencyManagement>
+
+    </dependencyManagement>sp
 
     <build>
         <plugins>
@@ -202,6 +186,4 @@
             </plugin>
         </plugins>
     </build>
-
-
 </project>
